--- a/index.html
+++ b/index.html
@@ -46,11 +46,7 @@
     <script src="plugIn/draw/src/edit/handler/Edit.Rectangle.js"></script>
     <script src="plugIn/draw/src/edit/handler/Edit.Marker.js"></script>
     
-    <!-- MagnifyingGlass plugIn -->
-    <link rel="stylesheet" href="plugIn/MagnifyingGlass/leaflet.magnifyingglass.css" />
-    <link rel="stylesheet" href="plugIn/MagnifyingGlass/Control.MagnifyingGlass.css" />
-    <script src="plugIn/MagnifyingGlass/leaflet.magnifyingglass.js"></script>
-    <script src="plugIn/MagnifyingGlass/example_button.js"></script>
+    <!-- Zoom level plugIn -->
     <link rel="stylesheet" href="plugIn/zoomdisplay/dist/leaflet.zoomdisplay.css" />
 	<title>Tunguu Before After</title>
 </head>
@@ -58,7 +54,7 @@
 <body>
 <script type="text/javascript" src="plugIn/zoomdisplay/dist/leaflet.zoomdisplay-src.js"></script>
 <div id="map"></div>
-<div id="m"></div>
+
 <script type="text/javascript">
     //Base layers
     var osm=L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a>'});
